# ITMO_OS

./: CMakeLists.txt  README.md
src/find/: find.cpp
src/jitcompiler/: compiler.cpp
src/libs/loadable/: Makefile  mul.cpp  mul.h  print_mul.cpp
src/libs/shared/: Makefile  print_sub.cpp  sub.cpp
src/libs/static/: Makefile  add.cpp  print_add.cpp
src/multi_socket/: Makefile  echo_client.cpp  echo_server.cpp
src/shell/: shell.cpp
src/signal_handler/: Makefile  main.cpp
src/sync_socket/: Makefile  a.html  b.txt  client.cpp  server.cpp
src/utils/: execute.h
